--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,25 @@
+@font-face {
+  font-family: "InknutAntiqua";
+  src: url("/fonts/InknutAntiqua/InknutAntiqua-Medium.ttf");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "InknutAntiquaExtraBold";
+  src: url("/fonts/InknutAntiqua/InknutAntiqua-ExtraBold.ttf");
+  font-weight: 800;
+}
+
+.fontBold {
+  font-family: InknutAntiquaExtraBold, sans-serif !important;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: InknutAntiqua, sans-serif !important;
 }
 
 a {
